--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,10 +2,14 @@
     "cSpell.words": [
         "APIKEY",
         "AUTHDOMAIN",
+        "daleb",
+        "Elige",
         "gana",
+        "Grupo",
         "MESSAGINGSENDERID",
         "PROJECTID",
         "quien",
+        "resultados",
         "STORAGEBUCKET"
     ]
 }
